// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features - LN10 - Timeline should not render timeline component if source is falsy 1`] = `<div />`;

exports[`features - LN10 - Timeline should render pagebuilder message component when isAdmin and error are truthy 1`] = `
<div>
  <div
    class="mod-warning --warning"
  >
    <h2
      class="title"
    >
      Advertencia
    </h2>
    <p
      class="text"
    >
      Mock error message
    </p>
  </div>
  <div
    class="ln-timeline"
  >
    <div
      class="--d-flex --text-center"
    >
      <div
        class="--uppercase --mb-sm --bbt"
      >
        <h3
          class="text ln-text --font-s --pb-xs --bbt --tm-weight --prumo"
        >
          Últimas Noticias
        </h3>
      </div>
    </div>
    <ul
      class="ln-timeline-list --mt-3xs --ml-3xs"
    >
      <li
        class="--d-flex --pb-sm"
      >
        <div
          class="subtitle-list --d-flex"
        >
          <time
            class="--font-2xs"
          >
            aN:aN
            <span
              class="text ln-text --none  --arial --font-bold"
            >
              en vivo
            </span>
          </time>
          <article
            class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-none --tablet-img-none --desktop-img-none"
            data-id="42CZD43D3REX5LZPKL4L7KDAFQ"
            data-notaid="42CZD43D3REX5LZPKL4L7KDAFQ"
            data-pos="tl01"
            data-source="editor"
          >
            <a
              class="link ln-link --d-flex --flex-col --unstyled"
              href="/politica/elecciones-2023-patricia-bullrich-sumo-a-su-equipo-al-neurologo-conrado-estol-nid28032023/"
              target="_self"
              title="Elecciones 2023: Patricia Bullrich sumó a su equipo al neurólogo Conrado Estol"
            >
              <section
                class="description-container --relative --d-flex --flex-col"
                href="/politica/elecciones-2023-patricia-bullrich-sumo-a-su-equipo-al-neurologo-conrado-estol-nid28032023/"
              >
                <h2
                  class="text ln-text title --prumo --font-medium --font-m"
                >
                  Elecciones 2023: Patricia Bullrich sumó a su equipo al neurólogo Conrado Estol
                </h2>
              </section>
            </a>
          </article>
        </div>
      </li>
      <li
        class="--d-flex --pb-sm"
      >
        <div
          class="subtitle-list --d-flex"
        >
          <time
            class="--font-2xs"
          >
            aN:aN
            <span
              class="text ln-text --tl-vivo   --arial --font-bold"
            >
              en vivo
            </span>
          </time>
          <article
            class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-none --tablet-img-none --desktop-img-none"
            data-id="AB6IP5YPIZG3NEKW7TDZ72O2PA"
            data-notaid="AB6IP5YPIZG3NEKW7TDZ72O2PA"
            data-pos="tl02"
            data-source="editor"
          >
            <a
              class="link ln-link --d-flex --flex-col --unstyled"
              href="/politica/preload-ultimas-noticias-nid09012023/"
              target="_self"
              title="preload ultimas noticias"
            >
              <section
                class="description-container --relative --d-flex --flex-col"
                href="/politica/preload-ultimas-noticias-nid09012023/"
              >
                <h2
                  class="text ln-text title --prumo --font-medium --font-m"
                >
                  preload ultimas noticias
                </h2>
              </section>
            </a>
          </article>
        </div>
      </li>
      <li
        class="--d-flex --pb-sm"
      >
        <div
          class="subtitle-list --d-flex"
        >
          <time
            class="--font-2xs"
          >
            aN:aN
            <span
              class="text ln-text --none  --arial --font-bold"
            >
              en vivo
            </span>
          </time>
          <article
            class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-none --tablet-img-none --desktop-img-none"
            data-id="H2K42QLZCJDELK2IIJPXKSA7FY"
            data-notaid="H2K42QLZCJDELK2IIJPXKSA7FY"
            data-pos="tl03"
            data-source="editor"
          >
            <a
              class="link ln-link --d-flex --flex-col --unstyled"
              href="/politica/prueba-chat-en-vivo-nid23032023/"
              target="_self"
              title="Prueba chat en vivo"
            >
              <section
                class="description-container --relative --d-flex --flex-col"
                href="/politica/prueba-chat-en-vivo-nid23032023/"
              >
                <h2
                  class="text ln-text title --prumo --font-medium --font-m"
                >
                  Prueba chat en vivo
                </h2>
              </section>
            </a>
          </article>
        </div>
      </li>
      <li
        class="--d-flex --pb-sm"
      >
        <div
          class="subtitle-list --d-flex"
        >
          <time
            class="--font-2xs"
          >
            aN:aN
            <span
              class="text ln-text --tl-vivo   --arial --font-bold"
            >
              en vivo
            </span>
          </time>
          <article
            class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-none --tablet-img-none --desktop-img-none"
            data-id="5LKZBWGDUREZBGKEEYD4RWJDLA"
            data-notaid="5LKZBWGDUREZBGKEEYD4RWJDLA"
            data-pos="tl04"
            data-source="editor"
          >
            <a
              class="link ln-link --d-flex --flex-col --unstyled"
              href="/politica/a-fondo-sin-imagen-destacada-nid24022023/"
              target="_self"
              title="A Fondo sin imagen destacada"
            >
              <section
                class="description-container --relative --d-flex --flex-col"
                href="/politica/a-fondo-sin-imagen-destacada-nid24022023/"
              >
                <h2
                  class="text ln-text title --prumo --font-medium --font-m"
                >
                  A Fondo sin imagen destacada
                </h2>
              </section>
            </a>
          </article>
        </div>
      </li>
      <li
        class="--d-flex --pb-sm"
      >
        <div
          class="subtitle-list --d-flex"
        >
          <time
            class="--font-2xs"
          >
            aN:aN
            <span
              class="text ln-text --none  --arial --font-bold"
            >
              en vivo
            </span>
          </time>
          <article
            class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-none --tablet-img-none --desktop-img-none"
            data-id="SUW6AQPARNCGLBDM2YOUGGC474"
            data-notaid="SUW6AQPARNCGLBDM2YOUGGC474"
            data-pos="tl05"
            data-source="editor"
          >
            <a
              class="link ln-link --d-flex --flex-col --unstyled"
              href="/politica/marcha-nacional-en-protesta-al-ministerio-de-desarrollo-social-nid16092021/"
              target="_self"
              title="Continúa la marcha nacional en protesta al Ministerio de Desarrollo Social "
            >
              <section
                class="description-container --relative --d-flex --flex-col"
                href="/politica/marcha-nacional-en-protesta-al-ministerio-de-desarrollo-social-nid16092021/"
              >
                <h2
                  class="text ln-text title --prumo --font-medium --font-m"
                >
                  Continúa la marcha nacional en protesta al Ministerio de Desarrollo Social 
                </h2>
              </section>
            </a>
          </article>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`features - LN10 - Timeline should render timeline component when source is truthy and isAdmin and error are falsy 1`] = `
<div>
  <div
    class="ln-timeline"
  >
    <div
      class="--d-flex --text-center"
    >
      <div
        class="--uppercase --mb-sm --bbt"
      >
        <h3
          class="text ln-text --font-s --pb-xs --bbt --tm-weight --prumo"
        >
          Últimas Noticias
        </h3>
      </div>
    </div>
    <ul
      class="ln-timeline-list --mt-3xs --ml-3xs"
    >
      <li
        class="--d-flex --pb-sm"
      >
        <div
          class="subtitle-list --d-flex"
        >
          <time
            class="--font-2xs"
          >
            aN:aN
            <span
              class="text ln-text --none  --arial --font-bold"
            >
              en vivo
            </span>
          </time>
          <article
            class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-none --tablet-img-none --desktop-img-none"
            data-id="42CZD43D3REX5LZPKL4L7KDAFQ"
            data-notaid="42CZD43D3REX5LZPKL4L7KDAFQ"
            data-pos="tl01"
            data-source="editor"
          >
            <a
              class="link ln-link --d-flex --flex-col --unstyled"
              href="/politica/elecciones-2023-patricia-bullrich-sumo-a-su-equipo-al-neurologo-conrado-estol-nid28032023/"
              target="_self"
              title="Elecciones 2023: Patricia Bullrich sumó a su equipo al neurólogo Conrado Estol"
            >
              <section
                class="description-container --relative --d-flex --flex-col"
                href="/politica/elecciones-2023-patricia-bullrich-sumo-a-su-equipo-al-neurologo-conrado-estol-nid28032023/"
              >
                <h2
                  class="text ln-text title --prumo --font-medium --font-m"
                >
                  Elecciones 2023: Patricia Bullrich sumó a su equipo al neurólogo Conrado Estol
                </h2>
              </section>
            </a>
          </article>
        </div>
      </li>
      <li
        class="--d-flex --pb-sm"
      >
        <div
          class="subtitle-list --d-flex"
        >
          <time
            class="--font-2xs"
          >
            aN:aN
            <span
              class="text ln-text --tl-vivo   --arial --font-bold"
            >
              en vivo
            </span>
          </time>
          <article
            class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-none --tablet-img-none --desktop-img-none"
            data-id="AB6IP5YPIZG3NEKW7TDZ72O2PA"
            data-notaid="AB6IP5YPIZG3NEKW7TDZ72O2PA"
            data-pos="tl02"
            data-source="editor"
          >
            <a
              class="link ln-link --d-flex --flex-col --unstyled"
              href="/politica/preload-ultimas-noticias-nid09012023/"
              target="_self"
              title="preload ultimas noticias"
            >
              <section
                class="description-container --relative --d-flex --flex-col"
                href="/politica/preload-ultimas-noticias-nid09012023/"
              >
                <h2
                  class="text ln-text title --prumo --font-medium --font-m"
                >
                  preload ultimas noticias
                </h2>
              </section>
            </a>
          </article>
        </div>
      </li>
      <li
        class="--d-flex --pb-sm"
      >
        <div
          class="subtitle-list --d-flex"
        >
          <time
            class="--font-2xs"
          >
            aN:aN
            <span
              class="text ln-text --none  --arial --font-bold"
            >
              en vivo
            </span>
          </time>
          <article
            class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-none --tablet-img-none --desktop-img-none"
            data-id="H2K42QLZCJDELK2IIJPXKSA7FY"
            data-notaid="H2K42QLZCJDELK2IIJPXKSA7FY"
            data-pos="tl03"
            data-source="editor"
          >
            <a
              class="link ln-link --d-flex --flex-col --unstyled"
              href="/politica/prueba-chat-en-vivo-nid23032023/"
              target="_self"
              title="Prueba chat en vivo"
            >
              <section
                class="description-container --relative --d-flex --flex-col"
                href="/politica/prueba-chat-en-vivo-nid23032023/"
              >
                <h2
                  class="text ln-text title --prumo --font-medium --font-m"
                >
                  Prueba chat en vivo
                </h2>
              </section>
            </a>
          </article>
        </div>
      </li>
      <li
        class="--d-flex --pb-sm"
      >
        <div
          class="subtitle-list --d-flex"
        >
          <time
            class="--font-2xs"
          >
            aN:aN
            <span
              class="text ln-text --tl-vivo   --arial --font-bold"
            >
              en vivo
            </span>
          </time>
          <article
            class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-none --tablet-img-none --desktop-img-none"
            data-id="5LKZBWGDUREZBGKEEYD4RWJDLA"
            data-notaid="5LKZBWGDUREZBGKEEYD4RWJDLA"
            data-pos="tl04"
            data-source="editor"
          >
            <a
              class="link ln-link --d-flex --flex-col --unstyled"
              href="/politica/a-fondo-sin-imagen-destacada-nid24022023/"
              target="_self"
              title="A Fondo sin imagen destacada"
            >
              <section
                class="description-container --relative --d-flex --flex-col"
                href="/politica/a-fondo-sin-imagen-destacada-nid24022023/"
              >
                <h2
                  class="text ln-text title --prumo --font-medium --font-m"
                >
                  A Fondo sin imagen destacada
                </h2>
              </section>
            </a>
          </article>
        </div>
      </li>
      <li
        class="--d-flex --pb-sm"
      >
        <div
          class="subtitle-list --d-flex"
        >
          <time
            class="--font-2xs"
          >
            aN:aN
            <span
              class="text ln-text --none  --arial --font-bold"
            >
              en vivo
            </span>
          </time>
          <article
            class="ln-card --d-flex --flex-col --ai-start --m --regular --no-media --mobile-img-none --tablet-img-none --desktop-img-none"
            data-id="SUW6AQPARNCGLBDM2YOUGGC474"
            data-notaid="SUW6AQPARNCGLBDM2YOUGGC474"
            data-pos="tl05"
            data-source="editor"
          >
            <a
              class="link ln-link --d-flex --flex-col --unstyled"
              href="/politica/marcha-nacional-en-protesta-al-ministerio-de-desarrollo-social-nid16092021/"
              target="_self"
              title="Continúa la marcha nacional en protesta al Ministerio de Desarrollo Social "
            >
              <section
                class="description-container --relative --d-flex --flex-col"
                href="/politica/marcha-nacional-en-protesta-al-ministerio-de-desarrollo-social-nid16092021/"
              >
                <h2
                  class="text ln-text title --prumo --font-medium --font-m"
                >
                  Continúa la marcha nacional en protesta al Ministerio de Desarrollo Social 
                </h2>
              </section>
            </a>
          </article>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
